fix: remove blue highlight when clicking on a link or button on mobile Chrome

--- a/app/components/layout/Header.css
+++ b/app/components/layout/Header.css
@@ -5,7 +5,6 @@
 .header__logo-link {
   max-width: 24rem;
   display: block;
-  box-shadow: none;
 }
 
 .header__logo-link svg {
